# XRLHF_CBMs

./: README.md  pyproject.toml
data/: README.md
models/: cbm_buggy.ckpt  cbm_oracle_v1.ckpt  cbm_oracle_v2.ckpt
notebooks/buggy/: BuggyModel.ipynb
notebooks/evaluation/: Buggy metrics.ipynb  CBM Inspection.ipynb  Oracle metrics CF.ipynb  Oracle metrics NCF.ipynb
notebooks/oracle/: Oracle_V1 (NCF train NCF test).ipynb  Oracle_V2 (CF train NCF test).ipynb
notebooks/ranker/: Ranker notebook.ipynb
src/: cbm.py  cub_data_module.py  cub_data_module_confounded.py  cub_data_module_confounded_oracle_v2.py  cub_data_module_no_shuffle.py  cub_data_module_no_shuffle_cf.py  cub_data_module_no_shuffle_cf2.py  cub_data_module_oracle_v2.py  rankers.py  utils_cbm.py
