[tool.poetry]
name = "cem"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.10"
torch = "1.11.0"
torchmetrics = "0.6.2"
torchvision = "0.12.0"
seaborn = "0.11.2"
scikit-learn = "1.0.1"
scikit-learn-extra = "0.2.0"
numpy = "1.19.5"
matplotlib = "3.5.0"
pytorch-lightning = "1.6.0"
notebook = "6.4.5"
matplotlib-inline = "0.1.3"
joblib = "1.1.0"
ipywidgets = "7.6.5"
ipython = "7.29.0"
ipython-genutils = "0.2.0"
ipykernel = "6.5.0"
importlib-resources = "5.4.0"
importlib-metadata = "4.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
